--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,4 +1,6 @@
 <script src="{{ base_path }}/assets/js/main.min.js"></script>
 
-<!-- {% include analytics.html %} -->
+{% comment %}
+{% include analytics.html %}
+{% endcomment %}
 {% include /comments-providers/scripts.html %}
